# Algorithm

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
sort/: CMakeLists.txt  basic.h  heap.h  merge.h  quick.h  shuffle.h  statistics.h
sorting/: heapsort.h  mergesort.h  quicksort.h  simplesort.h
tests/: CMakeLists.txt  sort_unittest.cpp  sorting_unittest.cpp
tests/data/sorting/: all_duplicates.txt  highly_dispersed.txt  highly_duplicated.txt  rarely_duplicated.txt  unique_2.txt
utils/: CMakeLists.txt  numbers_generator.cpp
